@@ -1,3 +1,7 @@
+2003-08-04  Andrew Cagney  <cagney@redhat.com>
+
+	* frame.c (frame_func_unwind): Use frame_unwind_address_in_block.
+
 2003-08-03  Daniel Jacobowitz  <drow@mvista.com>
 
 	PR c++/1267
